--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,7 @@
 /Project Logs for norbi_lm_#1/*
 /Project Outputs for norbi_lm_#1/*
 /History/*
+/_Previews/*
 
 # Игнорирование всех файлов и папок в ЛЮБЫХ директориях с указанным именем
 # Например /images/user.jpg, /core/images/user.jpg
