# 1.2 Поправлены названия элементов
 - поправлены названия элементов

--- a/.gitignore
+++ b/.gitignore
@@ -63,3 +63,4 @@
 # которые начинаются на "h" и МОГУТ содержать ещё один символ после
 # Например /images/h4/user.jpg, /images/h/company.jpeg
 #/images/h?/*.jp?g
+__Previews/
